# turtlemart

./: CMakeLists.txt  package.xml  setup.py
config/: ekf.yaml  joystick.yaml  mux.yaml
database/: products.db
debug/: csvtest.py  debug_plan_plot.py  error_radial.py  latency_monitor.py  nav_monitor.py  odom_reset.py  odom_test.py  respuestas_sus_2025-01-24_16-45-49.txt  respuestas_sus_2025-01-24_16-52-44.txt  respuestas_sus_2025-01-24_16-58-28.txt  respuestas_sus_2025-01-24_17-27-39.txt  respuestas_sus_2025-01-29_19-03-56.txt  respuestas_sus_2025-01-30_15-06-32.txt  respuestas_sus_2025-01-30_16-08-01.txt  respuestas_sus_2025-01-30_16-18-41.txt  respuestas_sus_2025-01-30_18-22-40.txt  respuestas_sus_2025-01-30_18-24-30.txt  respuestas_sus_2025-01-31_11-46-50.txt  respuestas_sus_2025-01-31_12-02-11.txt  respuestas_sus_2025-01-31_12-12-43.txt  scantest.py  select_products.py  subscriberagv.py  sus.py  sus_all_responses.csv  sus_alto.csv  sus_bajo.csv  sus_medio.csv  sus_results.csv
debug_output/: .~lock.route_analysis_20250123_184215.csv#  Final_precision_test_results_20250122_185105.csv  Final_route_analysis_20250123_184215.csv  Repetitibility_1111.csv  graphs.py  nav2_metrics_20241218_211352.txt  nav2_metrics_20241219_104038.txt  nav2_metrics_20241219_111703.txt  nav2_metrics_20241219_113730.txt  nav2_metrics_20241219_114435.txt  nav2_metrics_20241219_115115.txt  nav2_metrics_20241219_115357.txt  nav2_path_metrics_20241218_211352.csv  nav2_path_metrics_20241219_104038.csv  nav2_path_metrics_20241219_111703.csv  nav2_path_metrics_20241219_114435.csv  (+4 more)
(+194 files in other folders)
